--- a/static/css/main.css
+++ b/static/css/main.css
@@ -7,14 +7,34 @@ body, html {
 .content {
     margin: 0 auto;
     width: 400px;
+    float:center;
+    diplay:left
 }
 
-.image {
-    width: 50%;
-    display: block;  
+.tab {
+    top: 20px;
+    left: 20px;
+    width: 20%; 
+    opacity: 60%;
+    float: left;
+    content: center;
+    display: flex;
+  }
+
+.img {
+    content: center;
     margin: auto;
-    opacity: 50%;
-    padding-bottom: 1cm;
+    align-items: center;
+}
+
+
+
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 3px;
+    width: 100%;
+    text-align: center;
   }
 
 table, td, th {
